src/main/resources/sf-resource/SfClientPkgs/objects/EnviromentInformation__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Type__c</fullName>
        <label>Auth Type</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <formula>LEFT(Org_ID__c, 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshTokenCode__c</fullName>
        <label>RefreshTokenCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCodeNonEncrypted__c</fullName>
        <label>TokenCodeNonEncrypted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenCode__c</fullName>
        <label>TokenCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Auth_Type__c</controllingField>
            <picklistValues>
                <fullName>Production/Developer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Trusted Environment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trusted Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>